# cppmetrics

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  NOTICE  README.md  appveyor.yml
cmake/: GTest.cmake  GTestCMakeLists.txt.in  MetricHelpers.cmake
metrics/: CMakeLists.txt  Clock.cc  Clock.h  Counter.cc  Counter.h  CounterTests.cc  EWMA.cc  EWMA.h  EWMATests.cc  ExponentiallyDecayingReservoir.cc  ExponentiallyDecayingReservoir.h  ExponentiallyDecayingReservoirTests.cc  Gauge.cc  Gauge.h  Histogram.cc  Histogram.h  HistogramTests.cc  ManualClock.cc  ManualClock.h  ManualClockTests.cc  Meter.cc  Meter.h  MeterTests.cc  Metric.h  Registry.cc  Registry.h  RegistryTests.cc  Reporter.h  Reservoir.h  Snapshot.h  Timer.cc  Timer.h  TimerTests.cc  WeightedSnapshot.cc  WeightedSnapshot.h  WeightedSnapshotTests.cc
metrics/include/metrics/: Counter.h  ExponentiallyDecayingReservoir.h  Gauge.h  Histogram.h  LongAdder.h  OStreamReporter.h  Registry.h  Reporter.h  ScheduledReporter.h  Snapshot.h  Timer.h  WeightedSnapshot.h  metrics.h
metrics/src/: AlignedAllocations.cc  AlignedAllocations.h  Clock.cc  Counter.cc  EWMA.cc  ExponentiallyDecayingReservoir.cc  Gauge.cc  Histogram.cc  LongAdder.cc  Meter.cc  OStreamReporter.cc  Registry.cc  ScheduledReporter.cc  Timer.cc  WeightedSnapshot.cc
metrics/test/: CounterTests.cc  EWMATests.cc  ExponentiallyDecayingReservoirTests.cc  HistogramTests.cc  LongAdderBench.java  LongAdderTests.cc  ManualClock.h  ManualClockTests.cc  MeterTests.cc  OStreamReporterTests.cc  RegistryTests.cc  TimerTests.cc  WeightedSnapshotTests.cc
